2003-04-25  Bruno Haible  <bruno@clisp.org>

	* copy-file.c: Include <stddef.h>, for size_t.

2003-04-25  Jim Meyering  <jim@meyering.net>

	* copy-file.c (copy_file_preserving): Declare buf_size to be
	of type size_t, not int.

2003-04-11  Jim Meyering  <jim@meyering.net>

	Merge changes from Coreutils.

	2003-03-22  Jim Meyering  <jim@meyering.net>

	* strftime.c (widen): Cast alloca return value to proper type.

	2003-01-19  Ulrich Drepper  <drepper@redhat.com>

	From GNU libc.
	* strftime.c (my_strftime): Handle very large width
	specifications for numeric values correctly.  Improve checks for
	overflow.

	2003-01-19  Jim Meyering  <jim@meyering.net>

	* strftime.c (widen) [COMPILE_WIDE]: Merge nearly-identical definitions.
	(nl_get_alt_digit) [! defined my_strftime]: Define.
	(my_strftime) [_NL_CURRENT]: Merge nearly-identical uses of
	_nl_get_alt_digit and _nl_get_walt_digit.

	* strftime.c (my_strftime): Merge in locale-related changes from libc.
	These changes have no effect outside of _LIBC.

2003-04-10  Bruno Haible  <bruno@clisp.org>

	* findprog.h: New file, from GNU gettext.
	* findprog.c: New file, from GNU gettext.

2003-04-05  Jim Meyering  <jim@meyering.net>

	Merge changes from Coreutils.

	* exclude.h (PARAMS): Remove definition and uses.
	* exclude.c: Remove uses of `PARAMS'.

	* dirname.c [TEST_DIRNAME]: Update build instructions for test.
	Add test-cases for DOS filenames. Declare program_name.
	(main): Set up program_name.  Patch by Rich Dawe.

	* mountlist.c (read_filesystem_list) [MOUNTED_VMOUNT]: Detect any
	error from mntctl.
	Use mntctl's return value to drive the entry-processing loop, since
	we can't rely on the value of the vmt_length member in the last
	entry.  On some systems doing so could result in exhausting
	virtual memory.  Based in part on a patch from Mike Jetzer.

2003-04-04  Bruno Haible  <bruno@clisp.org>

	* linebreak.h: New file, from GNU gettext.
	* linebreak.c: New file, from GNU gettext with slight modifications.